# qgis-japanelevation-plugin

./: .gitignore  README.md  README_ja.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
japan_elevation/: __init__.py  japan_elevation.py  metadata.txt  test_suite.py
japan_elevation/tests/: test_metadata.py
japan_elevation/ui/: style.qss  style_loader.py
japan_elevation/ui/dialog/: dialog.py  dialog.ui
japan_elevation/utils/: click_handler.py
